split-dns/external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: split-dns
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.14.0
        args:
        - --source=ingress
        - --provider=coredns
        - --log-level=debug # debug only
        resources:
          limits:
            cpu: 50m
            memory: 100Mi
          requests:
            cpu: 30m
            memory: 30Mi
