split-dns/coredns.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns
  namespace: split-dns
  annotations: {}
    # metallb.universe.tf/loadBalancerIPs: 192.168.1.234
    #,fdeb:abba:237c::ea
spec:
  type: LoadBalancer
  selector:
    app: coredns
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
  externalTrafficPolicy: Local
